--- a/templates/about.html
+++ b/templates/about.html
@@ -21,27 +21,22 @@
         <main class="know-about-us" id="main-body">
             <section class="about-us">
                 <div class="about-content">
-                    <h1>MEET OUR LEADERS</h1>
+                    <h1 style="text-align:left;">MEET OUR LEADERS</h1>
                     <div class="our-leaders">
                         <div class="our-leaders-indiv fade-in">
-                           <img src="{% static './img/beautiful worship.jpg' %}" alt="our leaders">
-                           <p for="img">PROPHET COFIE POWERMAN BEKOE</p>
+                           <img src="{% static './img/prophetbk.jpg' %}" alt="our leaders">
+                           <h2 for="img">PROPHET COFIE POWERMAN BEKOE</h2>
                         </div>
                         <div class="our-leaders-indiv fade-in">
-                            <img src="{% static './img/prayerfulsmile.jpg' %}" alt="our leaders">
-                            <p for="img">PROHETESS TRACY POWERMAN BEKOE</p>
+                            <img src="{% static './img/prophets.jpg' %}" alt="our leaders">
+                            <h2 for="img">PROHETESS TRACY POWERMAN BEKOE</h2>
                         </div>
                                                
                     </div>
                 </div>
                 <div class="about-content">
                     <div class="about-left-text-area">
-                        <h1>ATTRIBUTES WE POSSESS</h1>
-                        {% comment %} <div class="about-links">
-                            <h1><a href="#church">Our Church</a></h1>
-                            <h1><a href="#vision">Our Vision</a></h1>
-                            <h1><a href="#mission">Our Mission</a></h1>
-                        </div>                  {% endcomment %}
+                        <h1 style="text-align: left">ATTRIBUTES WE POSSESS</h1>
                     </div>
 
                     <div class="about-right-text-area">
@@ -65,9 +60,9 @@
                     </div>
                 </div>
             </section>
-                    <h1 style="font-size:32px;">CONTACT US</h1>
             <section class="contact-section">
-                <div>
+                <div class="contact">
+                <h1 style="font-size:32px;text-align:left;">CONTACT US</h1>
                     <div class="contact-details">
                         <p><b>Prophet Cofie PowerMan Bekoe</b></p>
                         <p>Email: cofiebekoeministries@gmail.com</p>
