--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -5,13 +5,8 @@
 }
 
 #main-body{
-    border: 1px solid rgb(196, 176, 176);
+    /* border: 1px solid rgb(196, 176, 176); */
 }
-#main-body h1{
-    font-size:32px;
-    text-align:center;
-}
-
 
 body{
     width: 100%;
@@ -66,16 +61,16 @@ h1 {
 }
 
 .hero-banner{
-    background: url(/static/img/temple.jpeg) no-repeat;
+    background: url(/static/img/hero-banner-img.jpg) no-repeat;
     background-size: cover;
-    height: 60vh;
+    height: 100vh;
     position: center;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #faf4f8;
+    color: #000000;
     font-size: large;
 }
 
@@ -101,12 +96,13 @@ h1 {
 
 .hero-banner-comps a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(247, 243, 243);
     font-weight: bold;
     border: 2px solid rgb(11, 47, 253);
     border-radius: 5px;
     padding: 5px 12px;
     text-align: center;
+    background-color: rgb(44, 40, 40);
 }
 
 .hero-banner-comps a:hover {
@@ -121,7 +117,7 @@ h1 {
     align-items: center;
     padding: 10px;
     margin: 0;
-    background-color: #aef2f7d3;
+    background-color: #5c6464d3;
 }
 
 .nav-elements a {
@@ -161,6 +157,8 @@ h1 {
 .breadcrumb {
     display: none;
     justify-content: space-between;
+    border: 1px solid rgb(70, 43, 43);
+    padding: 5px;
 }
 
 .logo{
@@ -174,8 +172,12 @@ h1 {
     margin: 10px 60px;
     padding: 10px;
     background-color: rgb(240, 248, 248);
-    box-shadow: 0.5px 1px 5px 1.5px #c5bcbc;
     scroll-behavior: smooth;
+}
+
+.main-page h1{
+    margin-bottom: 30px;
+    text-align: center;
 }
 
 .main-items{
@@ -198,11 +200,12 @@ h1 {
 }
 
 .about-image-side{
-    background: linear-gradient(to right, rgba(235, 224, 224, 0.719), rgba(212, 176, 176, 0.932)), url(/static/img/prayerfulsmile.jpg) no-repeat center center;
+    background: linear-gradient(to right, rgba(235, 224, 224, 0.719), rgba(212, 176, 176, 0.932)), url(/static/img/praying.jpg) no-repeat center center;
     padding: 0 5px;
-    height: 300px;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     position: relative;
+    background-size: cover;
 }
 
 .about-image-side p{
@@ -243,6 +246,9 @@ h1 {
     transition: all 1s;
 }
 
+.sermon iframe{
+    margin: 20px 0;
+}
 
 @media screen and (max-width:600px){
     .fade-in.appear {
@@ -259,7 +265,15 @@ h1 {
 
     .sermon iframe{
         width:100%;
+        height: 100%;
+        padding: 0;
+    }
+    .sermon iframe{
+        margin: 20px 0;
+    }
 
+    h1{
+        font-size: 24px;
     }
 
     .nav-elements{
@@ -458,7 +472,7 @@ h1 {
 .major-upcoming-event{
     background-color: #adefffe1;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
     padding: 50px;
@@ -470,13 +484,19 @@ h1 {
     border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
     padding: 5px 30px;
-    width: min-content;
+    width:200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .major-upcoming-event a:hover{
     background-color: #eefdfb;
     color: black;
     transition: 1s;
+}
+.major-event h1{
+    text-align: left;
 }
 
 .venue h3{
@@ -490,13 +510,14 @@ h1 {
 /* Footer */
 
 .footer-area{
-    background: linear-gradient(to right, #01305bc9, #001374c4), url(/static/img/temple.jpeg) no-repeat;
+    background: linear-gradient(to right, #01305bc9, #001374c4), url(/static/img/foot.jpg) no-repeat;
 
     width: 100%;
     padding: 20px;
     color: white;
     background-position: center;
     background-size: cover;
+    height: 50vh;
 }
 
 .footer-items{
@@ -516,20 +537,21 @@ h1 {
 
 .footer p{
     font-size: 16px;
+    /* margin: 10px; */
 }
+
 
 .footer img{
     width: 20px;
     height: 20px;
-    /* background-color: white; */
     color: white;
+    /* margin: 20px; */
 }
 
 .social-links img {
     width: 40px;
-    height: 30px;
+    height: 20px;
     color: #ffffff;
-    border-radius: 100%;
     z-index: 1;
     position: relative;
 }
@@ -570,6 +592,9 @@ h1 {
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr;
+    }
+    .footer-area{
+        height: auto;
     }
 
     .major-upcoming-event{
