--- a/church/static/css/events.css
+++ b/church/static/css/events.css
@@ -1,6 +1,6 @@
 /* Events section */
 p{
-    font-family: "TT Firs Neue Trl Thin";
+    /* font-family: "TT Firs Neue Trl Thin"; */
     font-size: medium;
 }
 .events{
