--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="about-content">
                     <div class="about-left-text-area">
-                        <h1 style="text-align: left">ATTRIBUTES WE POSSESS</h1>
+                        <h1 style="text-align: left">OUR ATTRIBUTES</h1>
                     </div>
 
                     <div class="about-right-text-area">
