--- a/templates/index.html
+++ b/templates/index.html
@@ -80,19 +80,19 @@
                     <div class="sermon-section lazy">
 
                         <div class="sermon">
-                                {% for sermon in sermons %}
-                                <a class="sermon-options fade-in" href="{{sermon.youtube_link}}" target="blank"><p>{{sermon.title}}</p>
-                                </a><br>
-                                {% endfor %}
-                                <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
-                                </a><br>
+                            {% for sermon in sermons %}
+                            <a class="sermon-options fade-in" href="{{sermon.youtube_link}}" target="blank"><p>{{sermon.title}}</p>
+                            </a><br>
+                            {% endfor %}
+                            <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
+                            </a><br>
 
-                                <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
-                                </a>
-                                <br>
-                                
-                                <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
-                                </a>
+                            <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
+                            </a>
+                            <br>
+                            
+                            <a class="sermon-options fade-in" href="#"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit fugiat nostrum ab earum nulla assumenda! Quas fugit dolor saepe magni. </p>
+                            </a>
                         </div>
 
                     </div>
@@ -163,7 +163,7 @@
                     </a>
                     <a href="#"><img src="{% static './img/tweeticon.svg' %}" alt=""></a>
                     <a href="#"><img src="{% static './img/insta.svg' %}" alt=""></a>
-                    <a href="#"><img src="{% static './img/tube.svg' %}" alt=""></a>
+                    <a href="https://www.youtube.com/@prophetpowermanbekoe1295" target="_blank"><img src="{% static './img/tube.svg' %}" alt=""></a>
                 </span>
             </div>
         </div>
