--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -6,6 +6,7 @@
 
 #main-body{
     /* border: 1px solid rgb(196, 176, 176); */
+    font-family: "Poppins";
 }
 
 body{
@@ -57,6 +58,7 @@ h1 {
     font-style: oblique;
     font-size: 20px;
     margin: 20px;
+    font-family: "Poppins", sans-serif ;
     line-height: 30px;
 }
 
@@ -104,6 +106,11 @@ h1 {
     text-align: center;
     background-color: rgb(44, 40, 40);
 }
+
+.hero-banner-comps p, h1{
+    font-family: "Poppins";
+}
+
 
 .hero-banner-comps a:hover {
     background-color: #00c9fc;
@@ -415,7 +422,7 @@ h1 {
 .sermon p{
     background-color: #d8f3fae3;
     padding: 10px;
-
+    font-family: "Poppins";
 }
 
 .sermon p:hover{
@@ -439,6 +446,7 @@ h1 {
 .main-events-section{
     margin-top:10px;
     padding-bottom: 10px;
+    font-family: "Poppins";
 }
 .main-events-section h1 {
     margin: 20px 0;
@@ -477,6 +485,8 @@ h1 {
     align-items: center;
     justify-content: center;
     padding: 50px;
+    font-family: "Poppins", sans-serif ;
+
 }
 
 .major-upcoming-event a{
@@ -506,7 +516,15 @@ h1 {
 .venue{
     padding: 30px;
 }
+.major-event p{
+    font-family: "Poppins", sans-serif ;
 
+}
+
+.venue p{
+    font-family: "Poppins", sans-serif ;
+
+}
 
 /* Footer */
 
@@ -530,24 +548,49 @@ h1 {
 }
 
 
-.footer{
+/* .footer{
     margin-bottom: 20px;
     display: block;
     justify-content: flex-start;
 }
 
 .footer p{
+    font-family: "Poppins";
     font-size: 16px;
-    /* margin: 10px; */
 }
-
+*/
 
 .footer img{
     width: 20px;
     height: 20px;
     color: white;
-    /* margin: 20px; */
+} 
+
+
+.footer.lozad h1 {
+    display: inline;
+    vertical-align: middle;
+    margin-right: 5px;
 }
+
+.footer.lozad p {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    font-family: "Poppins";
+}
+
+.footer.lozad img {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+
+
+
+
+
 
 .social-links img {
     width: 40px;
@@ -602,7 +645,16 @@ h1 {
         display: block;
         align-items: center;
         justify-content: center;
-        padding: 50px 20px;
+        padding: 50px 20px;.footer p{
+    font-size: 16px;
+}
+
+
+.footer img{
+    width: 20px;
+    height: 20px;
+    color: white;
+}
     }
     .major-event{
         margin-bottom: 10px;
