--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
         <div class="footer-items">
             <div class="footer lozad">
                 <h1>CONTACT INFO</h1>
-                <div><p><img src="/static/img/user.svg" alt=""> Cofie Bekoe Ministries</p></div>
+                <p><img src="/static/img/user.svg" alt=""> Cofie Bekoe Ministries</p>
                 <p><img src="/static/img/home.svg" alt=""> Taifa, Hallelujah Junction</p>
                 <br>
                 <p><img src="/static/img/phone.svg" alt=""> +233556978861</p>
@@ -153,8 +153,11 @@
             </div>
             <div class="footer lozad">
                 <h1>CHURCH HOURS</h1>
-                <p>Days: Monday - Sunday</p>
-                <p>Time: 8am - 4pm</p>
+                <span>
+                    <p>Days: Monday - Sunday</p>
+                    <p>Time: 8am - 4pm</p>
+                </span>
+                
             </div>
             <div class="footer lozad">
                 <h1>FIND US ON SOCIAL MEDIA</h1>
