--- a/templates/rsvp-popup.html
+++ b/templates/rsvp-popup.html
@@ -8,6 +8,10 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: "Poppins";
+        }
+        p{
+            font-family: "Poppins";
         }
         .row{
             margin: 20px 100px;
@@ -28,6 +32,11 @@
             .row{
                 margin: 5px;
                 padding: 5px;
+            }
+            .rsvp{
+                display: block;
+                justify-content: flex-start;
+                
             }
         }
     </style>
