--- a/church/static/css/events.css
+++ b/church/static/css/events.css
@@ -1,7 +1,6 @@
 /* Events section */
 p{
-    /* font-family: "TT Firs Neue Trl Thin"; */
-    font-size: medium;
+    font-family: "Poppins";
 }
 .events{
     margin: 30px;
