--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+{{ FONTS.default.family }}
     <section id="parentComponent">
         <header class="navBar">
             <div class="logo-nav-elements">
