--- a/church/static/css/events.css
+++ b/church/static/css/events.css
@@ -1,7 +1,13 @@
 /* Events section */
 p{
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
+
+h1 h2{
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
+
 .events{
     margin: 30px;
     background-color: #fcffff;
@@ -82,6 +88,7 @@ p{
     gap: 10px;
     background-color: rgb(243, 231, 247);
     margin-bottom: 20px;
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 .upcoming-event-objects img{
