--- a/church/static/css/gallery.css
+++ b/church/static/css/gallery.css
@@ -30,7 +30,8 @@
 }
 
 .main-gallery p{
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 .top-img-block{
