--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -1,9 +1,9 @@
 
 @font-face {
-    font-family: 'TT-Firs-Neue-Trial-Light';
-    font-style: normal;
+    font-family: 'TT-Firs-Neue-Trial-Regular';
+    font-style: bold;
     font-weight: bold;
-    src: local('TT Firs Neue'), url('/static/fonts/TT Firs Neue Trial Light.ttf') format('opentype');
+    src: local('TT Firs Neue'), url('/static/fonts/TT Firs Neue Trial Regular.ttf') format('opentype');
 }
 
 *{
@@ -13,20 +13,20 @@
 }
 
 #main-body{
-    /* border: 1px solid rgb(196, 176, 176); */
     font-family: "Poppins";
 }
 
 body{
     width: 100%;
-    font-family: 'Poppins', "TT-Firs-Neue-Trial-Light";
+    font-family: 'Poppins', "TT-Firs-Neue-Trial-Regular";
 }
 p{
-    font-family: 'Poppins Regular';
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
 }
 h1 {
-    font-family: 'Poppins';
+    /* font-family: 'Poppins'; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 32px;
     /* color: #3f4344; */
 }
@@ -67,7 +67,7 @@ h1 {
     font-size: 20px;
     margin: 20px;
     /* font-family: "Poppins", sans-serif ; */
-    font-family: "TT Firs Neue Trial Light"
+    font-family: "TT-Firs-Neue-Trial-Regular";
     line-height: 30px;
 }
 
@@ -119,7 +119,7 @@ h1 {
 
 .hero-banner-comps p, h1{
     /* font-family: "Poppins"; */
-    font-family: "TT-Firs-Neue-Trial-Light"
+    font-family: "TT-Firs-Neue-Trial-Regular"
 }
 
 
@@ -142,7 +142,8 @@ h1 {
     text-decoration: none;
     color: black;
     padding:5px 20px;
-    font-family: 'Poppins Medium';
+    /* font-family: 'Poppins Medium'; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
 }
 
@@ -231,14 +232,14 @@ h1 {
     justify-content: center;
     align-items: center;
     color: rgb(0, 0, 0);
-    font-family: 'Poppins Light';
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
     padding: 10px;
 }
 
 .about-text-side p{
     margin-bottom: 20px;
-    font-family: "Poppins Light";
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
     line-height: 6mm;
 }
@@ -430,7 +431,8 @@ h1 {
 .sermon p{
     background-color: #d8f3fae3;
     padding: 10px;
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 .sermon p:hover{
@@ -446,7 +448,8 @@ h1 {
 .sermon a{
     text-decoration: none;
     color: black;
-    font-family: "Poppins", sans-serif ;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 
@@ -454,7 +457,8 @@ h1 {
 .main-events-section{
     margin-top:10px;
     padding-bottom: 10px;
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 .main-events-section h1 {
     margin: 20px 0;
@@ -493,7 +497,8 @@ h1 {
     align-items: center;
     justify-content: center;
     padding: 50px;
-    font-family: "Poppins", sans-serif ;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 
 }
 
@@ -525,12 +530,14 @@ h1 {
     padding: 30px;
 }
 .major-event p{
-    font-family: "Poppins", sans-serif ;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 
 }
 
 .venue p{
-    font-family: "Poppins", sans-serif ;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 
 }
 
@@ -585,7 +592,8 @@ h1 {
     display: inline-block;
     vertical-align: middle;
     margin-right: 10px;
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
     margin-bottom: 5px;
 }
 
@@ -595,11 +603,6 @@ h1 {
     margin-right: 10px;
     margin-bottom: 5px;
 }
-
-
-
-
-
 
 
 .social-links img {
@@ -655,17 +658,19 @@ h1 {
         display: block;
         align-items: center;
         justify-content: center;
-        padding: 50px 20px;.footer p{
-    font-size: 16px;
-}
-
-
-.footer img{
-    width: 20px;
-    height: 20px;
-    color: white;
-}
+        padding: 50px 20px;
     }
+    .footer p{
+        font-size: 16px;
+    }
+
+
+    .footer img{
+        width: 20px;
+        height: 20px;
+        color: white;
+    }
+
     .major-event{
         margin-bottom: 10px;
     }
