--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -13,7 +13,8 @@
 }
 
 #main-body{
-    font-family: "Poppins";
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 body{
