--- a/templates/about.html
+++ b/templates/about.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <div class="contact-form" id="contact">
-                    <form action="" method="post">
+                    <form action="" method="POST">
                         {% csrf_token %}
                         <label for="Full Name">Full Name</label>
                         <p style="width: 100%;">{{forms.fullname}}</p>
