--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,105 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    width: 100%;
-    font-family: 'TT Firs Neue', 'TT Firs Neue Light', 'TT Firs Neue Thin';
-}
-
-p {
-    font-family: 'TT Firs Neue Thin';
-    font-size: 16px;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    font-family: 'TT Firs Neue Light'
-}
-
-
-.navBar {
-    padding-bottom: 20px;
-}
-
-.logo-nav-elements {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-size: cover;
-    background-color: #c3e5e8;
-    font-family: 'TT Firs Neue Light';
-    box-shadow: 2px 5px 8px rgb(65, 73, 73);
-}
-.logo img {
-    width: 350px;
-    height: 150px;
-}
-
-.church-name {
-    color: rgb(2, 18, 39);
-    font-style: oblique;
-    font-size: 20px;
-    margin: 20px;
-    line-height: 30px;
-}
-
-.nav-elements {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    margin: 0;
-}
-
-.nav-elements a {
-    text-decoration: none;
-    color: black;
-    padding: 5px 20px;
-}
-
-.nav-ele2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 18px;
-    padding: 8px 20px;
-}
-
-.nav-ele2 a {
-    background-color:#b5061f;
-    border-radius: 18px;
-}
-
-.nav-elements a:hover {
-    border-radius: 5px;
-    border: 1px solid rgb(161, 255, 243);
-    transition: 1s;
-}
-
-.breadcrumb {
-    display: none;
-    /* justify-content: space-between; */
-}
-
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 5px;
-}
-
-.nav-menu-items {
-    display: block;
-    justify-content: center;
-    align-items: center;
-}
-
 
 /* main body section */
 .know-about-us {
@@ -121,7 +19,7 @@ h4 {
     display: grid;
     grid-template-columns:1fr 1fr;
     gap: 10px;
-    background: url(./img/color-center.webp);
+    background: url("/static/img/color-center.webp");
     text-align: center;
 }
 .our-leaders img{
@@ -132,11 +30,24 @@ h4 {
 .our-leaders-indiv{
     margin-bottom: 20px;
 }
+.our-leaders-indiv h2{
+    margin-bottom: 20px;
+    color: rgb(88, 95, 93);
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
 
-/* about-left-text-area */
+
 .about-right-text-area{
     width: 100%;
     padding: 5px;
+}
+
+h1{
+    font-size: 28px;
+}
+p{
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 .about-links a{
@@ -148,101 +59,28 @@ h4 {
     margin: 10px;
 }
 
-
 .about-links a:hover{
     border-bottom: 2px solid rgb(23, 126, 83);
 }
 .ambitions{
-    margin-bottom: 20px;
-}
-.ambitions h3{
-    text-decoration: underline;
+    margin-bottom: 50px;
 }
 
-/* fade-in effect */
-.fade-in {
-    opacity: 0;
-    tansition: opacity 250ms ease-in;
+
+
+.ambitions h1{
+    text-align: center;
+    color: rgb(102, 114, 109);
 }
 
-.fade-in.appear {
-    opacity: 1;
-    transition: all 1s;
-}
-
-.nav-buttons {
-    visibility: visible;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-    background-color: #eadaca;
-    color: #021220;
+.contact-details p{
+    margin-top: 10px;
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
 }
 
 @media screen and (max-width:600px) {
 
-    .nav-elements {
-        visibility: hidden;
-        display: block;
-        justify-content: baseline;
-        grid-template-rows: 2fr;
-        background-color: #01305b;
-        color: rgb(255, 255, 255);
-        height: 80%;
-        width: 80%;
-        z-index: 1;
-        background-position: left;
-        position: absolute;
-        padding: 20px 0;
-        margin: 0;
-    }
-    .mobile-nav-view a{
-        display: block;
-        justify-content: start;
-        align-items: flex-start;
-        color: aliceblue;
-        line-height: 30px;
-    }
-
-    .nav-elements a {
-        margin: 20px 30px;
-        width: 50%;
-        height: 100%;
-    }
-    .nav-ele2 {
-        display: flex;
-        justify-content: left;
-        align-items: flex-start;
-    }
-
-    .logo-nav-elements {
-        height: min-content;
-        display: block;
-        padding: 0px;
-    }
-
-    .breadcrumb {
-        visibility: visible;
-        width: 35px;
-        height: 30px;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        background-color: #00ffd5;
-        padding: 2px;
-        /* border-radius: 25px; */
-    }
-    .nav-menu-items {
-        display: block;
-        justify-content: space-between;
-        margin: 0;
-        padding: 5px;
-    }
-
-    .church-name {
-        text-align: center;
-    }
     .about-content {
         display: grid;
         grid-template-columns: 1fr;
@@ -263,34 +101,13 @@ h4 {
     }
 }
 
-
-
-/* Footer section */
-.footer-area {
-    width: 100%;
-    background-color: #01305b;
-    padding: 20px;
-    color: white;
-}
-
-.footer-items {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    padding: 10px;
-    width: 100%;
-}
-
-.footer {
-    margin-bottom: 20px;
-}
-
-
 /* about */
 
 .contact-section h1{
-    font-size: 24px;
+    text-align: left;
+    font-size: 28px;
 }
+
 .contact-form{
     display: grid;
     grid-template-columns: 1fr;
@@ -316,8 +133,6 @@ h4 {
     background-color:rgb(191, 236, 236);
 }
 
-
-
 .email{
     display: block;
     margin-right: 5px;
@@ -331,13 +146,6 @@ h4 {
     grid-template-rows: 2fr;
 }
 
-.social-links {}
-
-.social-links img {
-    width: 40px;
-    height: 30px;
-    color: #c3e5e8;
-}
 
 @media screen and (max-width:600px) {
     .contact-section {
@@ -345,11 +153,7 @@ h4 {
         grid-template-columns: 1fr;
         grid-template-rows: 2fr;
     }
-    .footer-items {
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr;
-    }
+
     .contact-form {
         display: grid;
         grid-template-columns: 1fr;
