--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,24 +1,35 @@
+
+@font-face {
+    font-family: 'TT-Firs-Neue-Trial-Regular';
+    font-style: bold;
+    font-weight: bold;
+    src: local('TT Firs Neue'), url('/static/fonts/TT Firs Neue Trial Regular.ttf') format('opentype');
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+#main-body{
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
+
 body{
     width: 100%;
-    font-family: 'TT Firs Neue', 'TT Firs Neue Light', 'TT Firs Neue Thin';
+    font-family: 'Poppins', "TT-Firs-Neue-Trial-Regular";
 }
 p{
-    font-family: 'TT Firs Neue Thin';
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
 }
-h1, h2, h3, h4 {
-    font-family: 'TT Firs Neue Light'
-}
-
-
-.navBar{
-    padding-bottom: 20px;
+h1 {
+    /* font-family: 'Poppins'; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+    font-size: 32px;
+    /* color: #3f4344; */
 }
 
 
@@ -28,13 +39,19 @@ h1, h2, h3, h4 {
     align-items: center;
     flex-wrap: wrap;
     background-size: cover;
-    background-color: #c5e3e8;
-    font-family: 'TT Firs Neue Thin';
+    background-color: #ffffff;
     box-shadow: 2px 5px 8px rgb(106, 124, 124);
+    width: 100%;
+}
+
+.logo{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo img{
-    width:350px;
+    width:20rem;
     height:150px;
 }
 
@@ -42,6 +59,7 @@ h1, h2, h3, h4 {
     visibility: visible;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    position: static;
 }
 
 .church-name{
@@ -49,37 +67,33 @@ h1, h2, h3, h4 {
     font-style: oblique;
     font-size: 20px;
     margin: 20px;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
     line-height: 30px;
 }
 
 .hero-banner{
-    background: url(./img/temple.jpeg) no-repeat;
+    background: url(/static/img/hero-banner-img.jpg) no-repeat;
     background-size: cover;
-    height: 60vh;
+    height: 80vh;
     position: center;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+    font-size: large;
+    /* margin: 100px 0; */
 }
 
-.hero-banner p{
-    color: azure;
-    display: flex;
-    align-items: center;
-    position: center;
-    background-position: center;
-    padding-bottom: 10px;
-}
 
 .hero-banner-comps{
-    display: grid;
-    grid-template-columns: repeat(auto-fill(400px, 1fr));
-    grid-template-rows: 1fr;
-    padding: 20px;
-    margin:0 100px;
-    transition: 1s all ease-in;
+    margin: 200px;
 }
 
 
-@keyframes glowing {
+/* @keyframes glowing {
     0% {
         background-position: 0 0;
     }
@@ -91,17 +105,29 @@ h1, h2, h3, h4 {
     100% {
         background-position: 0 0;
     }
-}
+} */
 
 .hero-banner-comps a{
     text-decoration: none;
-    color: rgb(250, 242, 242);
-    font-size: small;
+    color: rgb(247, 243, 243);
+    font-weight: bold;
+    border: 2px solid rgb(11, 47, 253);
+    border-radius: 5px;
+    padding: 5px 12px;
+    text-align: center;
+    background-color: rgb(44, 40, 40);
 }
 
+.hero-banner-comps p, h1{
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular"
+}
+
+
 .hero-banner-comps a:hover {
-    background-color: #c5e3e8;
-    transition:200ms;
+    background-color: #00c9fc;
+    transition:1s;
+    color: black;
 }
 
 .nav-elements{
@@ -110,14 +136,16 @@ h1, h2, h3, h4 {
     align-items: center;
     padding: 10px;
     margin: 0;
-    background-color: #f3e5d8;
+    background-color: #5c6464d3;
 }
 
 .nav-elements a {
     text-decoration: none;
     color: black;
     padding:5px 20px;
-    font-family: 'TT Firs Neue Light';
+    /* font-family: 'Poppins Medium'; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+    font-size: 16px;
 }
 
 .nav-ele2 {
@@ -131,6 +159,7 @@ h1, h2, h3, h4 {
     background-color: #b5061f;
     border-radius: 15px;
     padding: 5px 20px;
+    color: white;
 }
 
 .nav-elements a:hover{
@@ -142,11 +171,14 @@ h1, h2, h3, h4 {
 .nav-menu-items {
     display: block;
     justify-content: flex-start;
+    width: 100%;
 }
 
 .breadcrumb {
     display: none;
     justify-content: space-between;
+    border: 1px solid rgb(70, 43, 43);
+    padding: 5px;
 }
 
 .logo{
@@ -157,9 +189,15 @@ h1, h2, h3, h4 {
 }
 
 #main-body{
-    margin: 10px 30px;
+    margin: 10px 60px;
     padding: 10px;
-    background-color: rgb(242, 248, 248);
+    background-color: rgb(240, 248, 248);
+    scroll-behavior: smooth;
+}
+
+.main-page h1{
+    margin-bottom: 30px;
+    text-align: center;
 }
 
 .main-items{
@@ -177,15 +215,17 @@ h1, h2, h3, h4 {
 .about-text-side h1{
     margin-bottom: 10px;
     font-size: 24px;
-    color: #44a2bc;
+    text-align:center;
+    font-size: 32px;
 }
 
 .about-image-side{
-    background: linear-gradient(to right, rgba(235, 224, 224, 0.719), rgba(212, 176, 176, 0.932)), url(./img/prayerful\ smile.jpg) no-repeat center center;
+    background: linear-gradient(to right, rgba(235, 224, 224, 0.719), rgba(212, 176, 176, 0.932)), url(/static/img/praying.jpg) no-repeat center center;
     padding: 0 5px;
-    height: 400px;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     position: relative;
+    background-size: cover;
 }
 
 .about-image-side p{
@@ -193,13 +233,14 @@ h1, h2, h3, h4 {
     justify-content: center;
     align-items: center;
     color: rgb(0, 0, 0);
-    font-family: 'TT Firs Neue Thin';
+    font-family: "TT-Firs-Neue-Trial-Regular";
+    font-size: 16px;
     padding: 10px;
 }
 
 .about-text-side p{
     margin-bottom: 20px;
-    font-family: "TT Firs Neue Thin";
+    font-family: "TT-Firs-Neue-Trial-Regular";
     font-size: 16px;
     line-height: 6mm;
 }
@@ -212,27 +253,46 @@ h1, h2, h3, h4 {
     text-decoration: none;
 }
 .about-text-side a:hover{
-    border: 5px rgb(21, 250, 181) solid;
-    transition: 2s;
+    border: 1px rgb(21, 250, 181) solid;
     transform: scale(1.5);
-    margin: 8px;
 }
 
 .fade-in{
     opacity: 0;
-    tansition: opacity 250ms ease-in;
+    transition: opacity 250ms ease-in;
 }
 .fade-in.appear{
     opacity: 1;
     transition: all 1s;
 }
 
+.sermon iframe{
+    margin: 20px 0;
+}
 
 @media screen and (max-width:600px){
     .fade-in.appear {
         opacity: 1;
         transition: all 1s;
     }
+    .logo img {
+        width: 16rem;
+        height: 120px;
+    }
+    .hero-banner p{
+        padding: 12px 50px;
+    }
+
+    .sermon iframe{
+        width:100%;
+        height: 100%;
+        padding: 0;
+    }
+    .sermon iframe{
+        margin: 0 0;
+    }
+
+
     .nav-elements{
         display: grid;
         grid-template-columns: 1fr;
@@ -246,8 +306,8 @@ h1, h2, h3, h4 {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
-        background-color: #6a6e6d;
-        height: 80%;
+        background-color: #faf4f8;
+        height: 60%;
         width: 80%;
         z-index: 1;
         background-position: left;
@@ -255,15 +315,13 @@ h1, h2, h3, h4 {
     }
 
     .nav-elements a{
-        margin: 5px 20px;
+        margin: 10px 20px;
         width: 50%;
         height:max-content;
         color: #eefdfb;
     }
 
-    .nav-elements a:hover {
-        background-color: #eefdfb;
-    }
+
 
     .logo-nav-elements {
         height: min-content;
@@ -307,7 +365,7 @@ h1, h2, h3, h4 {
         padding: 0;
     }
     #main-body{
-        margin: 5px;
+        margin: 15px;
         padding: 5px;
     }
     .hero-banner-comps {
@@ -326,7 +384,8 @@ h1, h2, h3, h4 {
 }
 
 .images-comps img{
-    height: 25rem;
+    height: 20rem;
+    width: 30rem;
 }
 
 .image-gallery{
@@ -335,65 +394,165 @@ h1, h2, h3, h4 {
 
 .image-gallery h1{
     margin: 20px 0;
-    font-size: 24px;
-    color: #44a2bc;
+    font-size: 32px;
+    /* color: #44a2bc; */
+    text-align: center;
 }
 
-.events-section{
+/* recent sermon section */
+.recent-sermon{
     margin-top:30px;
     padding-bottom: 30px;
 }
-.events-section h1 {
-    margin: 20px 0;
-    font-size: 24px;
-    color: #44a2bc;
+.recent-sermon h1 {
+    margin: 40px 0;
+    font-size: 32px;
+    text-align:center;
 }
 
-.upcoming-events-section{
+.past-sermon-section{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     gap: 20px;
 }
 
-.upcoming-events{
-    border-right: 3px solid rgb(35, 169, 202);
+.sermon-section{
+    color: #eefdfb;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
+
+.sermon{
+    padding: 10px;
+    margin: 8px;
+}
+
+.sermon p{
+    background-color: #d8f3fae3;
+    padding: 10px;
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
+
+.sermon p:hover{
+    background-color: #8d8d8de3;
+    transition:2s;
+    color: rgb(46, 46, 243);    
+}
+
+.sermon img{
+    width: 100%;
+    height: 100%;
+}
+.sermon a{
+    text-decoration: none;
+    color: black;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
+
+
+/* recent event and weekly services */
+.main-events-section{
+    margin-top:10px;
+    padding-bottom: 10px;
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+}
+.main-events-section h1 {
+    margin: 20px 0;
+    font-size: 32px;
+    /* color: #44a2bc; */
+    text-align: center;
+}
+
+.upcoming-events-section{
     display: grid;
-    border-radius: 5px;
-    grid-template-rows: 1fr 1fr;
-    background-color: rgba(250, 246, 242, 0.767);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    gap: 20px;
+    margin: 20px 80px;
+}
+
+.main-upcoming-events{
+    color: #eefdfb;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(134, 2, 35, 0.767);
     border: 1px solid rgb(179, 167, 167);
-    height: 40vh;
 }
 
-.upcoming-events:hover {
-    background:linear-gradient(to right, rgba(255, 141, 236, 0.932), #ccfff6);
-}
-.upcoming-events:first-child{
-    background:linear-gradient(to right, #a5b2f3, rgba(218, 252, 225, 0.938));
+
+.main-upcoming-events:first-child{
+    background-color: #01305B;
 }
 
-.upcoming-events .date{
-    color: #000000;
-    font-size: larger;
-    line-height: 1.5mm;
-    padding: 5px;
+
+.major-upcoming-event{
+    background-color: #adefffe1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+
 }
 
-.upcoming-events .venue{
-    color: #040505;
-    font-size: larger;
-    padding: 5px;
+.major-upcoming-event a{
+    text-decoration: none;
+    color: rgb(46, 66, 73);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    padding: 5px 30px;
+    width:200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.major-upcoming-event a:hover{
+    background-color: #eefdfb;
+    color: black;
+    transition: 1s;
+}
+.major-event h1{
+    text-align: left;
+}
+
+.venue h3{
+    font-size: 16px;
+}
+.venue{
+    padding: 30px;
+}
+.major-event p{
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+
+}
+
+.venue p{
+    /* font-family: "Poppins", sans-serif ; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+
 }
 
 /* Footer */
 
 .footer-area{
+    background: linear-gradient(to right, #01305bc9, #001374c4), url(/static/img/foot.jpg) no-repeat;
+
     width: 100%;
-    background-color: #01305B;
     padding: 20px;
     color: white;
-    /* border:#c5011b 2px solid; */
+    background-position: center;
+    background-size: cover;
+    height: 50vh;
 }
 
 .footer-items{
@@ -404,15 +563,55 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
-.footer{
+
+/* .footer{
     margin-bottom: 20px;
+    display: block;
+    justify-content: flex-start;
 }
-.social-links {}
+
+.footer p{
+    font-family: "Poppins";
+    font-size: 16px;
+}
+*/
+
+.footer img{
+    width: 20px;
+    height: 20px;
+    color: white;
+} 
+
+
+/* .footer.lozad h1 {
+    display: inline;
+    vertical-align: middle;
+    margin-right: 5px;
+} */
+
+.footer.lozad p {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    /* font-family: "Poppins"; */
+    font-family: "TT-Firs-Neue-Trial-Regular";
+    margin-bottom: 5px;
+}
+
+.footer.lozad img {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
 
 .social-links img {
     width: 40px;
-    height: 30px;
-    color: #c3e5e8;
+    height: 20px;
+    color: #ffffff;
+    z-index: 1;
+    position: relative;
 }
 
 @media screen and (max-width:600px) {
@@ -430,7 +629,21 @@ h1, h2, h3, h4 {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-        width: 100%;
+        margin: 20px auto;
+    }
+
+    .past-sermon-section {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: 10px auto;
+    }
+    .recent-sermon{
+        margin-top:0px;
+        /* padding-bottom: 10px; */
+    }
+    .recent-sermon h1 {
+        margin: 20px 0;
     }
 
     .footer-items {
@@ -438,13 +651,32 @@ h1, h2, h3, h4 {
         grid-template-rows: 1fr;
         grid-template-columns: 1fr;
     }
+    .footer-area{
+        height: auto;
+    }
+
+    .major-upcoming-event{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        padding: 50px 20px;
+    }
+    .footer p{
+        font-size: 16px;
+    }
+
+
+    .footer img{
+        width: 20px;
+        height: 20px;
+        color: white;
+    }
+
+    .major-event{
+        margin-bottom: 10px;
+    }
 
 }
-
-
-
-
-
 
 
 
